# GravLib

./: .readthedocs.yaml  Cargo.toml  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  README.md  TESTING.md  ascii.md  justfile
(reference) Lemlib Source Code/: compile_commands.json  host
(reference) Lemlib Source Code/include/lemlib/: smartMotor.hpp
(reference) Lemlib Source Code/src/lemlib/: smartMotor.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  pr-fix-template.md
.github/workflows/: test.yml
docs/: ASYNC_TASK_SYSTEM.md  ODOMETRY_FORMULA_SHEET.md  ODOMETRY_UPDATE_FLOW.md  PID_BEST_PRACTICES.md  about.md  conf.py  download.md  index.md
docs/source/: conf.py  index.md
docs/tutorial/: PID.md  api.md  getting_started.md  odometry.md
examples/: async_odometry_example.rs  async_odometry_usage.rs  motion_demo.rs  pid_usage.rs  simple_task_example.rs
src/: main.rs
src/GravLib/: misc.rs  mod.rs  pid.rs
src/GravLib/actuator/: mod.rs  motorGroup.rs  motor_group.rs  smartmotor.rs
src/GravLib/chassis/: chassis.rs  odom.rs  pose.rs
src/GravLib/drivebase/: TODO.txt  chassis.rs  drivetrain.rs  exit_conditions.rs  mod.rs  odometry.rs  pose.rs  task_manager.rs  task_system.rs
src/GravLib/mission_control/: commander.rs
src/GravLib/motions/: mod.rs  motion_cancel_helper.rs  turn_to.rs
src/GravLib/odom/: localisation.rs  mod.rs  sensors.rs
src/GravLib/pid/: PID.rs
src/GravLib/subsystems/: drivetrain.rs
src/GravLib/test_framework/: assertions.rs  hardware_sim.rs  mocks.rs  (+2 more)
tests/: integration_tests.rs  pid_tests.rs  test_runner_example.rs
(+25 files in other folders)
